屏蔽掉支付宝支付功能

--- a/Tpl/App/Shop_index.html
+++ b/Tpl/App/Shop_index.html
@@ -131,6 +131,7 @@
             </div>
         </header>
         <eq name="showsub" value="2">
+            <!-- 上边这个值原来是1现在为了屏蔽这个功能，暂时改为2-->
             <div class="pp-follow" style="padding: 0.2em 0px;background-color: rgba(255, 255, 255, 0.4);position: fixed;top: 0;z-index: 2;width:100%">
                 <!--<eq name="showfather" value='1'>-->
                     <!--<img class="p-fopic" src="{$father['headimgurl']}">-->
