--- a/Tpl/App/Shop_orderDetail.html
+++ b/Tpl/App/Shop_orderDetail.html
@@ -110,13 +110,13 @@
 							<p class="ads_pay_p1 ads_pay_lineh1">余额：<i>￥{$_SESSION['WAP']['vip']['money']}</i></p>
 							<p class="ads_pay_p2 ads_pay_lineh1 color10 ads_font_size2">余额不足由其他方式支付</p>
 						</div>					
-						<div class="ads_pay ovflw ads_border_dashed" data-paytype = "alipayApp" data-disable="0">
-							<span class="iconfont fl ads_pay_lineh dtl_mar1" id="ccalipayApp">&#xe656</span>
-							<div class="ads_orimg fl dtl_mar1">
-								<img src="__PUBLIC__/App/img/zhif.jpg" />
-							</div>
-							<p class="ads_pay_lineh">手机支付宝支付</p>
-						</div>
+						<!--<div class="ads_pay ovflw ads_border_dashed" data-paytype = "alipayApp" data-disable="0">-->
+							<!--<span class="iconfont fl ads_pay_lineh dtl_mar1" id="ccalipayApp">&#xe656</span>-->
+							<!--<div class="ads_orimg fl dtl_mar1">-->
+								<!--<img src="__PUBLIC__/App/img/zhif.jpg" />-->
+							<!--</div>-->
+							<!--<p class="ads_pay_lineh">手机支付宝支付</p>-->
+						<!--</div>-->
 						<div class="ads_pay ovflw" data-paytype = "wxpay" data-disable="0">
 							<span class="iconfont fl ads_pay_lineh dtl_mar1">&#xe656</span>
 							<div class="ads_orimg fl dtl_mar1">
