--- a/Tpl/App/Shop_orderMake.html
+++ b/Tpl/App/Shop_orderMake.html
@@ -101,13 +101,13 @@
         </p>
         <p class="ads_pay_p2 ads_pay_lineh1 color10 ads_font_size2">余额不足由其他方式支付</p>
     </div>
-    <div class="ads_pay ovflw" data-paytype="alipayApp" data-disable="0">
-        <span class="iconfont fl ads_pay_lineh dtl_mar1">&#xe656</span>
-        <div class="ads_orimg fl dtl_mar1">
-            <img src="__PUBLIC__/App/img/zhif.jpg"/>
-        </div>
-        <p class="ads_pay_lineh">手机支付宝支付</p>
-    </div>
+    <!--<div class="ads_pay ovflw" data-paytype="alipayApp" data-disable="0">-->
+        <!--<span class="iconfont fl ads_pay_lineh dtl_mar1">&#xe656</span>-->
+        <!--<div class="ads_orimg fl dtl_mar1">-->
+            <!--<img src="__PUBLIC__/App/img/zhif.jpg"/>-->
+        <!--</div>-->
+        <!--<p class="ads_pay_lineh">手机支付宝支付</p>-->
+    <!--</div>-->
     <div class="ads_pay ovflw" data-paytype="wxpay" data-disable="0">
         <span class="iconfont fl ads_pay_lineh dtl_mar1">&#xe656</span>
         <div class="ads_orimg fl dtl_mar1">
